[package]
name = "orbit"
version = "0.23.0"
description = "Package manager and build tool for HDLs"
authors = ["Chase Ruskin <cruskin@umich.edu>"]
keywords = ["hdl", "package-manager", "build-tool", "verilog", "vhdl"]
repository = "https://github.com/chaseruskin/orbit"
documentation = "https://chaseruskin.github.io/orbit"
default-run = "orbit"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
cliproc = "2"
colored = "2"
curl = { version = "0.4.44", features = ["static-ssl"] }
flate2 = "1.0.26"
fs_extra = "1.3"
glob = "0.3"
home = "0.5"
ignore = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.108"
tempfile = "3.5"
thiserror = "1.0.0"
tar = "0.4"
toml = "0.7"
toml_edit = "0.19"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
uuid25 = { version = "0.3.4", features = ["uuid"] }
zip = "0.6"
